--- a/helpmain.html
+++ b/helpmain.html
@@ -122,17 +122,15 @@
                 <div class="grid condensed conten-descrip">
                     <div class="row cells5 ">
                         <div class="cell colspan3 bg-white">
-                            <h1 class="text-light fg-blue"> Privacidad <span class="mif-security place-right"></span></h1>
+                            <h1 class="text-light fg-blue"> Ayuda <span class="mif-help place-right"></span></h1>
                             <hr class="thin bg-grayLighter">
                             <div class="cell">
-                                <h5 class="fg-darker">La privacidad es una utopía cuando se trata de internet, sin embargo, es posible cuando el servicio es sin fines de lucro. SaveMyPassword en son de la privacidad te ofrece:</h5>
+                                <h5 class="fg-dark">Para iniciar en este sitio primero debes logearte, si ya tienes una cuenta ingresa a través del menú desplegable en la barra superior, en caso de que no, realiza los pasos siguientes:</h5>
                                 <div class="row cells5">
                                     <ul class="numeric-list large-bullet green-bullet square-bullet">
-                                        <li>No compartir tu información con nadie, debido a que no tiene fines de lucro.</li>
-                                        <li>No usar la información como venta o distribución de ninguna forma.</li>
-                                        <li>Toda la información que compartas en este sitio está resguardada con encriptadción MD5.</li>
-                                        <li>Puedes eliminar tu cuenta de este sitio cuando quieras.</li>
-                                        <li>Cuando se elimina tu cuenta, se elimina todo lo que hayas almacenado en este sitio, de tal modo que si deseas ingresar de nuevo al sitio tendrás que registrarte de nuevo.</li>
+                                        <li>Ingresa los datos que se piden, tu nombre (no tiene que ser real), tus apellidos (tampoco tiene que ser real).</li>
+                                        <li>El correo de preferencia tiene que ser real, aunque puedes usar un nombre de usuario solamente, sin embargo para recuperar una contraseña sin correo será más complicado.</li>
+                                        <li>Ingresa tu contraseña y confirma la misma, después de realizarlo clic en Registrase</li>
                                     </ul>
                                 </div>
                             </div>
@@ -187,8 +185,8 @@
                         <div class="ali-der-menu span12">
                             <ul class="horizontal-menu compact">
                                 <li><a target="_blanck" href="http://linuxgx.blogspot.mx/">&copy; 2015 SaveMyPassword - LiNuXiToS</a></li>
-                                <li class="place-right"><a href="#"> <span class="mif-security"> Privacidad </span> </a></li>
-                                <li class="place-right"><a href="helpmain.html"> <span class="mif-help"> Ayuda </span> </a></li>
+                                <li class="place-right"><a href="privacitymain.html"> <span class="mif-security"> Privacidad </span> </a></li>
+                                <li class="place-right"><a href="#"> <span class="mif-help"> Ayuda </span> </a></li>
                             </ul>
                         </div>
                         </div>
