--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             <div class="padding20">
                                 <!-- form action="validar.php" method="post" data-role="validator" data-hint-mode="hint" data-hint-easing="easeOutBounce" -->
                                 <form action="dashboard.html" method="post" data-role="validator" data-hint-mode="hint" data-hint-easing="easeOutBounce">
-                                    <h4 class="text-light">Iniciar sesión...</h4>
+                                    <h4 class="text-light"> <span class="mif-enter"></span> Iniciar sesión...</h4>
                                     <div class="input-control text">
                                         <span class="mif-user prepend-icon"></span>
                                         <input type="text" id="userlogin1" name="userlogin1" data-validate-func="minlength" data-validate-arg="1" data-validate-hint-position="top">
@@ -109,7 +109,7 @@
                                         <input type="reset" name="reset" value="Limpiar" class="button bg-olive button large primary">
                                         <input type="submit" name="Submit" value="Guardar" class="button bg-green button large primary">
                                     </div>
-                                    <a href="">¿Contraseña olvidada?</a>
+                                    <a href="" class="fg-orange">¿Contraseña olvidada?</a>
                                 </form>
                             </div>
                         </div>
@@ -186,8 +186,12 @@
                             <div class="ali-der-menu span12">
                                 <ul class="horizontal-menu compact">
                                     <li><a target="_blanck" href="http://linuxgx.blogspot.mx/">&copy; 2015 SaveMyPassword - LiNuXiToS</a></li>
-                                    <li class="place-right"><a href="privacitymain.html"> <span class="mif-security"> Privacidad </span> </a></li>
-                                    <li class="place-right"><a href=""> <span class="mif-help"> Ayuda </span> </a></li>
+                                    <li class="place-right">
+                                        <a href="privacitymain.html">
+                                            <span class="mif-security"> Privacidad </span>
+                                        </a>
+                                    </li>
+                                    <li class="place-right"><a href="helpmain.html"> <span class="mif-help"> Ayuda </span> </a></li>
                                 </ul>
                             </div>
                         </div>
