--- a/userpages/acount.html
+++ b/userpages/acount.html
@@ -141,10 +141,10 @@
                         <hr class="thin bg-grayLighter">
                         <!--Inicia seccion de actualizar información de usuario-->
                         <form action="validar.php" method="post" data-role="validator" data-hint-mode="hint" data-hint-easing="easeOutBounce">
-                            <div class="grid padding20">
+                            <div class="grid">
                                 <h4 class="text-light fg-blue"> Información de usuario </h4>
                                 <div class="row cells5">
-                                    <div class="cell colspan5">
+                                    <div class="cell colspan3">
                                         <label>Nombre de usuario</label>
                                         <div class="input-control text full-size" data-role="input">
                                             <span class="mif-user prepend-icon"></span>
@@ -152,7 +152,7 @@
                                             <span class="input-state-error mif-warning"></span>
                                         </div>
                                     </div>
-                                    <div class="cell colspan5">
+                                    <div class="cell colspan3">
                                         <label>Apellidos</label>
                                         <div class="input-control text full-size" data-role="input">
                                             <span class="mif-user prepend-icon"></span>
@@ -160,16 +160,20 @@
                                             <span class="input-state-error mif-warning"></span>
                                         </div>
                                     </div>
+                                    <div class="cell">
+                                        <label>&nbsp;</label>
+                                        <div class="input-control text ">
+                                            <input type="submit" name="Submit" value="Actualizar" class="button bg-pass button large primary">
+                                        </div>
+                                    </div>
                                 </div>
-                                <input type="reset" name="reset" value="Limpiar" class="button bg-gray button large primary">
-                                <input type="submit" name="Submit" value="Actualizar" class="button bg-pass button large primary">
-                                <hr class="thin bg-grayLighter">
                             </div>
                         </form>
+                        <hr class="thin bg-grayLighter">
                         <!--Fianliza seccion de actualizar información de usuario-->
                         <!--Inicia seccion de actualizar información de la cuenta-->
                         <form action="validar.php" method="post" data-role="validator" data-hint-mode="hint" data-hint-easing="easeOutBounce">
-                            <div class="grid padding20">
+                            <div class="grid">
                                 <h4 class="text-light fg-blue"> Cambio de la contraseña - Nombre de usuario </h4>
                                 <div class="row cells5">
                                     <div class="cell colspan3">
