--- a/userpages/acount.html
+++ b/userpages/acount.html
@@ -174,7 +174,7 @@
                         <!--Inicia seccion de actualizar información de la cuenta-->
                         <form action="validar.php" method="post" data-role="validator" data-hint-mode="hint" data-hint-easing="easeOutBounce">
                             <div class="grid">
-                                <h4 class="text-light fg-blue"> Cambio de la contraseña - Nombre de usuario </h4>
+                                <h4 class="text-light fg-green"> Cambio de la contraseña</h4>
                                 <div class="row cells5">
                                     <div class="cell colspan3">
                                         <label>Contraseña actual</label>
@@ -200,9 +200,13 @@
                                             <span class="input-state-error mif-warning"></span>
                                         </div>
                                     </div>
+                                    <div class="cell">
+                                        <label>&nbsp;</label>
+                                        <div class="input-control text ">
+                                            <input type="submit" name="Submit" value="Actualizar" class="button bg-green success large primary">
+                                        </div>
+                                    </div>
                                 </div>
-                                <input type="reset" name="reset" value="Limpiar" class="button bg-gray button large primary">
-                                <input type="submit" name="Submit" value="Actualizar" class="button bg-pass button large primary">
                             </div>
                         </form>
                         <!--Fianliza seccion de actualizar información de la cuenta-->
