--- a/userpages/acount.html
+++ b/userpages/acount.html
@@ -210,6 +210,30 @@
                             </div>
                         </form>
                         <!--Fianliza seccion de actualizar información de la cuenta-->
+                        <hr class="thin bg-grayLighter">
+                        <!--Inicia seccion de actualizar información de la cuenta-->
+                        <form action="validar.php" method="post" data-role="validator" data-hint-mode="hint" data-hint-easing="easeOutBounce">
+                            <div class="grid">
+                                <h4 class="text-light fg-orange"> Establecer frase secreta</h4>
+                                <div class="row cells5">
+                                    <div class="cell colspan3">
+                                        <label>Contraseña actual</label>
+                                        <div class="input-control text full-size" data-role="input">
+                                            <span class="mif-file-binary prepend-icon"></span>
+                                            <input id="cuentanueva" name="cuentanueva" type="text" placeholder="" data-validate-func="minlength" data-validate-arg="1" data-validate-hint-position="top">
+                                            <span class="input-state-error mif-warning"></span>
+                                        </div>
+                                    </div>
+                                    <div class="cell">
+                                        <label>&nbsp;</label>
+                                        <div class="input-control text ">
+                                            <input type="submit" name="Submit" value="Actualizar" class="button bg-orange warning large primary">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                        <!--Fianliza seccion de actualizar información de la cuenta-->
                     </div>
                 </div>
             </div>
