--- a/userpages/acount.html
+++ b/userpages/acount.html
@@ -217,7 +217,7 @@
                                 <h4 class="text-light fg-orange"> Establecer frase secreta</h4>
                                 <div class="row cells5">
                                     <div class="cell colspan3">
-                                        <label>Contraseña actual</label>
+                                        <label>Frase secreta actual</label>
                                         <div class="input-control text full-size" data-role="input">
                                             <span class="mif-file-binary prepend-icon"></span>
                                             <input id="cuentanueva" name="cuentanueva" type="text" placeholder="" data-validate-func="minlength" data-validate-arg="1" data-validate-hint-position="top">
@@ -227,7 +227,7 @@
                                     <div class="cell">
                                         <label>&nbsp;</label>
                                         <div class="input-control text ">
-                                            <input type="submit" name="Submit" value="Actualizar" class="button bg-orange warning large primary">
+                                            <input type="submit" name="Submit" value="Modificar" class="button bg-orange warning large primary">
                                         </div>
                                     </div>
                                 </div>
