--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     </ul>
                     <div class="place-right">
                         <ul class="app-bar-menu">
-                            <li><a href="" > <span class="mif-help"> Acerca de </span> </a> </li>
+                            <li><a href="about.html" > <span class="mif-help"> Acerca de </span> </a> </li>
                         </ul>
                     </div>
                     <div class="app-bar-element place-right">
