--- a/privacity.html
+++ b/privacity.html
@@ -105,7 +105,7 @@
                     <div class="cell size-x200" id="cell-sidebar" style="background-color: #71b1d1; height: 100%">
                         <ul class="sidebar">
                             <li>
-                                <a href="#">
+                                <a href="dashboard.html">
                                     <span class="mif-list icon"></span>
                                     <span class="title">Mostrar todo</span>
                                 </a>
