--- a/userpages/addpasswd.html
+++ b/userpages/addpasswd.html
@@ -183,7 +183,7 @@
                 <div class="ali-der-menu span12">
                     <ul class="horizontal-menu compact">
                         <li><a target="_blanck" href="http://linuxgx.blogspot.mx/">&copy; 2015 SaveMyPassword - LiNuXiToS</a></li>
-                        <li class="place-right"><a href="#"> <span class="mif-security"> Privacidad </span> </a></li>
+                        <li class="place-right"><a href="../privacity.html"> <span class="mif-security"> Privacidad </span> </a></li>
                         <li class="place-right"><a href="help.html"> <span class="mif-help"> Ayuda </span> </a></li>
                     </ul>
                 </div>
