--- a/dashboard.html
+++ b/dashboard.html
@@ -91,7 +91,6 @@
                     <div class="app-bar-drop-container padding10 place-right no-margin-top block-shadow" data-role="dropdown" data-no-close="true" style="width: 220px">
                         <h2 class="text-light">Cuenta</h2>
                         <ul class="unstyled-list">
-                            <li><a href="" class="fg-white fg-hover-yellow"><span class="mif-profile"></span> Perfil</a></li>
                             <li><a href="" class="fg-white fg-hover-yellow"><span class="mif-security"></span> Securidad</a></li>
                             <li><a href="index.html" class="fg-white fg-hover-yellow"><span class="mif-exit"></span> Salir</a></li>
                         </ul>
@@ -186,7 +185,7 @@
                 <div class="ali-der-menu span12">
                     <ul class="horizontal-menu compact">
                         <li><a target="_blanck" href="http://linuxgx.blogspot.mx/">&copy; 2015 SaveMyPassword - LiNuXiToS</a></li>
-                        <li class="place-right"><a href="privacity.html"> <span class="mif-security"> Privacidad </span> </a></li>
+                        <li class="place-right"><a href="userpages/privacity.html"> <span class="mif-security"> Privacidad </span> </a></li>
                         <li class="place-right"><a href="userpages/help.html"> <span class="mif-help"> Ayuda </span> </a></li>
                     </ul>
                 </div>
