--- a/userpages/privacity.html
+++ b/userpages/privacity.html
@@ -7,24 +7,24 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <title>M2 - Save My Password</title>
-        <link REL="Shortcut Icon" HREF="img/icono.png">
+        <link REL="Shortcut Icon" HREF="../img/icono.png">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <meta name="description" content="Sitio web persoanl del bloggero M2">
         <meta name="keywords" content="HTML, CSS, JS, JavaScript,m2, linuxitos, fedora, web development">
         <meta name="author" content="Jesús Fernando Merino Merino and LiNuXiToS">
 
-        <link href="css/metro.css" rel="stylesheet">
-        <link href="css/metro-icons.css" rel="stylesheet">
+        <link href="../css/metro.css" rel="stylesheet">
+        <link href="../css/metro-icons.css" rel="stylesheet">
         <!-- link href="css/docs.css" rel="stylesheet" -->
-        <link href="css/m2main.css" rel="stylesheet">
+        <link href="../css/m2main.css" rel="stylesheet">
 
-        <script src="js/jquery-2.1.3.min.js"></script>
-        <script src="js/metro.js"></script>
-        <script src="js/docs.js"></script>
-        <script src="js/prettify/run_prettify.js"></script>
-        <script src="js/ga.js"></script>
-        <script src="js/jquery.dataTables.min.js"></script>
+        <script src="../js/jquery-2.1.3.min.js"></script>
+        <script src="../js/metro.js"></script>
+        <script src="../js/docs.js"></script>
+        <script src="../js/prettify/run_prettify.js"></script>
+        <script src="../js/ga.js"></script>
+        <script src="../js/jquery.dataTables.min.js"></script>
 
         <style>
             .icon-list li {
@@ -81,7 +81,7 @@
         <div class="container page-content">
             <!--Sección del menú cuando el usuario se haya logeado-->
             <div class="app-bar fixed-top darcula" data-role="appbar">
-                <a href="dashboard.html" class="app-bar-element branding selected"><span class="mif-home"> SaveMyPassword </span></a>
+                <a href="../dashboard.html" class="app-bar-element branding selected"><span class="mif-home"> SaveMyPassword </span></a>
                 <span class="app-bar-divider"></span>
                 <ul class="app-bar-menu">
                 </ul>
@@ -91,7 +91,6 @@
                     <div class="app-bar-drop-container padding10 place-right no-margin-top block-shadow" data-role="dropdown" data-no-close="true" style="width: 220px">
                         <h2 class="text-light">Cuenta</h2>
                         <ul class="unstyled-list">
-                            <li><a href="" class="fg-white fg-hover-yellow"><span class="mif-profile"></span> Perfil</a></li>
                             <li><a href="" class="fg-white fg-hover-yellow"><span class="mif-security"></span> Securidad</a></li>
                             <li><a href="index.html" class="fg-white fg-hover-yellow"><span class="mif-exit"></span> Salir</a></li>
                         </ul>
@@ -105,31 +104,31 @@
                     <div class="cell size-x200" id="cell-sidebar" style="background-color: #71b1d1; height: 100%">
                         <ul class="sidebar">
                             <li>
-                                <a href="dashboard.html">
+                                <a href="../dashboard.html">
                                     <span class="mif-list icon"></span>
                                     <span class="title">Mostrar todo</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="userpages/addpasswd.html">
+                                <a href="addpasswd.html">
                                     <span class="mif-key icon"></span>
                                     <span class="title">Agregar</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="userpages/modifypasswd.html">
+                                <a href="modifypasswd.html">
                                     <span class="mif-search icon"></span>
                                     <span class="title">Modificar</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="userpages/acount.html">
+                                <a href="acount.html">
                                     <span class="mif-cogs icon"></span>
                                     <span class="title">Cuenta</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="userpages/help.html">
+                                <a href="help.html">
                                     <span class="mif-info icon"></span>
                                     <span class="title">Ayuda</span>
                                 </a>
@@ -161,7 +160,7 @@
                     <ul class="horizontal-menu compact">
                         <li><a target="_blanck" href="http://linuxgx.blogspot.mx/">&copy; 2015 SaveMyPassword - LiNuXiToS</a></li>
                         <li class="place-right"><a href="privacity.html"> <span class="mif-security"> Privacidad </span> </a></li>
-                        <li class="place-right"><a href="userpages/help.html"> <span class="mif-help"> Ayuda </span> </a></li>
+                        <li class="place-right"><a href="help.html"> <span class="mif-help"> Ayuda </span> </a></li>
                     </ul>
                 </div>
             </div>
