--- a/dashboard.html
+++ b/dashboard.html
@@ -84,10 +84,11 @@
                 <a href="dashboard.html" class="app-bar-element branding selected"><span class="mif-home"> SaveMyPassword </span></a>
                 <span class="app-bar-divider"></span>
                 <ul class="app-bar-menu">
+                    <li><a href="userpages/about.html" class="fg-white fg-hover-yellow"><span class="mif-help"></span> Acerca de</a></li>
                 </ul>
 
                 <div class="app-bar-element place-right">
-                    <span class="dropdown-toggle"><span class="mif-cog"></span> Jesús Fernando </span>
+                    <span class="dropdown-toggle uppercase"><span class="mif-cog"></span> Jesús Fernando </span>
                     <div class="app-bar-drop-container padding10 place-right no-margin-top block-shadow" data-role="dropdown" data-no-close="true" style="width: 220px">
                         <h2 class="text-light">Cuenta</h2>
                         <ul class="unstyled-list">
