--- a/userpages/about.html
+++ b/userpages/about.html
@@ -81,10 +81,10 @@
         <div class="container page-content">
             <!--Sección del menú cuando el usuario se haya logeado-->
             <div class="app-bar fixed-top darcula" data-role="appbar">
-                <a href="../dashboard.html" class="app-bar-element branding selected"><span class="mif-home"> SaveMyPassword </span></a>
+                <a href="../dashboard.html" class="app-bar-element branding"><span class="mif-home"> SaveMyPassword </span></a>
                 <span class="app-bar-divider"></span>
                 <ul class="app-bar-menu">
-                    <li><a href="about.html" class="fg-white fg-hover-yellow"><span class="mif-help"></span> Acerca de</a></li>
+                    <li><a href="#" class="selected fg-white fg-hover-yellow"><span class="mif-help"></span> Acerca de</a></li>
                 </ul>
 
                 <div class="app-bar-element place-right">
@@ -93,7 +93,7 @@
                         <h2 class="text-light">Cuenta</h2>
                         <ul class="unstyled-list">
                             <li><a href="" class="fg-white fg-hover-yellow"><span class="mif-security"></span> Securidad</a></li>
-                            <li><a href="index.html" class="fg-white fg-hover-yellow"><span class="mif-exit"></span> Salir</a></li>
+                            <li><a href="../index.html" class="fg-white fg-hover-yellow"><span class="mif-exit"></span> Salir</a></li>
                         </ul>
                     </div>
                 </div>
@@ -137,20 +137,41 @@
                         </ul>
                     </div>
                     <div class="cell auto-size padding20 bg-white">
-                        <h1 class="text-light"> Privacidad <span class="mif-security place-right"></span></h1>
-                        <hr class="thin bg-grayLighter">
-                        <div class="cell">
-                            <h5>La privacidad es una utopía cuando se trata de internet, sin embargo, es posible cuando el servicio es sin fines de lucro. SaveMyPassword en son de la privacidad te ofrece:</h5>
-                            <div class="row cells5">
-                                <ul class="numeric-list large-bullet green-bullet square-bullet">
-                                    <li>No compartir tu información con nadie, debido a que no tiene fines de lucro.</li>
-                                    <li>No usar la información como venta o distribución de ninguna forma.</li>
-                                    <li>Toda la información que compartas en este sitio está resguardada con encriptadción MD5.</li>
-                                    <li>Puedes eliminar tu cuenta de este sitio cuando quieras.</li>
-                                    <li>Cuando se elimina tu cuenta, se elimina todo lo que hayas almacenado en este sitio, de tal modo que si deseas ingresar de nuevo al sitio tendrás que registrarte de nuevo.</li>
-                                </ul>
+                        <h1 class="text-light"> Acerca de SaveMyPassword <span class="mif-info place-right"></span></h1>
+                        <hr class="thin bg-grayLighter ">
+                            <div class="cell align-center">
+                                <h3 class="fg-darker">SaveMyPassword es un sitio web que permite la administración de cuentas de usuarios y contraseñas en la nube.</h3>
+                                <div class="fg-black align-center">
+                                    <h3> La página web del proyecto en GitHub es:</h3> <a target="_blank" href="https://github.com/jesusferm/savemypassword"><span class="mif-github mif-3x"></span></a>
+                                </div>
+                                <hr class="thin bg-red">
+                                <h4 class="fg-green">Fue creado y desarrollado por <span>Fernando Merino</span>: Licenciado en Informática, interesado en
+                                    <div>
+                                        <span class="tag success">PHP</span>
+                                        <span class="tag success">CSS</span>
+                                        <span class="tag success">HTML</span>
+                                        <span class="tag success">JavaScript</span>
+                                        <span class="tag success">Java</span>
+                                        <span class="tag success">MySQL</span>
+                                        <span class="tag success">Git</span>
+                                        <span class="tag success">Latex</span>
+                                    </div>
+                                    Enviar sugerencias y bugs:<a href="mailto:sergey@pimenov.com.ua">LiNuXiToS</a>
+                                </h4>
+                                <div class="fg-darker align-center">
+                                    <h3> Las principales redes sociales del autor</h3>
+                                        <a href="https://plus.google.com/u/0/112872357438242952092/" target="_blank" class="fg-black fg-hover-red"> <span class="mif-google-plus mif-3x"></span> </a>
+                                        <a href="https://www.facebook.com/jesusfermm" target="_blank" class="fg-black fg-hover-blue"> <span class="mif-facebook mif-3x"> </a>
+                                        <a href="https://twitter.com/FerFlit" target="_blank" class="fg-black fg-hover-blue"> <span class="mif-twitter mif-3x"> </a>
+                                        <a href="https://www.youtube.com/user/gXferr/" target="_blank" class="fg-black fg-hover-red"> <span class="mif-youtube mif-3x"> </a>
+                                        <a href="https://github.com/jesusferm" target="_blank" class="fg-black fg-hover-blue"> <span class="mif-github mif-3x"> </a>
+                                        <a href="https://mx.linkedin.com/in/merinofernando" target="_blank" class="fg-black fg-hover-blue"> <span class="mif-linkedin mif-3x"></span> </a>
+                                </div>
+                                <div class="fg-dark align-center text-small" style="margin-top:150px;">
+                                    Este sitio web ha utilizando el framework de desarrollo en HTML Metro UI CSS 3.0, desarrollado por Sergey Pimenov <a target="_blank" href="http://metroui.org.ua/">Visitar sitio web</a>
+                                </div>
+
                             </div>
-                        </div>
                     </div>
                 </div>
             </div>
