--- a/userpages/addpasswd.html
+++ b/userpages/addpasswd.html
@@ -84,14 +84,14 @@
                 <a href="../dashboard.html" class="app-bar-element branding selected"><span class="mif-home"> SaveMyPassword </span></a>
                 <span class="app-bar-divider"></span>
                 <ul class="app-bar-menu">
+                    <li><a href="about.html" class="fg-white fg-hover-yellow"><span class="mif-help"></span> Acerca de</a></li>
                 </ul>
 
                 <div class="app-bar-element place-right">
-                    <span class="dropdown-toggle"><span class="mif-cog"></span> Jesús Fernando </span>
+                    <span class="dropdown-toggle uppercase"><span class="mif-cog"></span> Jesús Fernando </span>
                     <div class="app-bar-drop-container padding10 place-right no-margin-top block-shadow" data-role="dropdown" data-no-close="true" style="width: 220px">
                         <h2 class="text-light">Cuenta</h2>
                         <ul class="unstyled-list">
-                            <li><a href="" class="fg-white fg-hover-yellow"><span class="mif-profile"></span> Perfil</a></li>
                             <li><a href="" class="fg-white fg-hover-yellow"><span class="mif-security"></span> Securidad</a></li>
                             <li><a href="../index.html" class="fg-white fg-hover-yellow"><span class="mif-exit"></span> Salir</a></li>
                         </ul>
@@ -183,7 +183,7 @@
                 <div class="ali-der-menu span12">
                     <ul class="horizontal-menu compact">
                         <li><a target="_blanck" href="http://linuxgx.blogspot.mx/">&copy; 2015 SaveMyPassword - LiNuXiToS</a></li>
-                        <li class="place-right"><a href="../privacity.html"> <span class="mif-security"> Privacidad </span> </a></li>
+                        <li class="place-right"><a href="privacity.html"> <span class="mif-security"> Privacidad </span> </a></li>
                         <li class="place-right"><a href="help.html"> <span class="mif-help"> Ayuda </span> </a></li>
                     </ul>
                 </div>
