--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                         <input type="reset" name="reset" value="Limpiar" class="button bg-olive button large primary">
                                         <input type="submit" name="Submit" value="Guardar" class="button bg-green button large primary">
                                     </div>
-                                    <a href="" class="fg-orange">¿Contraseña olvidada?</a>
+                                    <a href="resetpasswd.html" class="fg-orange">¿Contraseña olvidada?</a>
                                 </form>
                             </div>
                         </div>
