--- a/resetpasswd.html
+++ b/resetpasswd.html
@@ -138,8 +138,10 @@
                         </div>
                         <div class="cell colspan2">
                             <div class="example bf-blue">
+                                <br/>
                                 <h1 class="text-light fg-red">Recuperar contraseña <span class="mif-lock"></span></h1>
-                                <h4></h4>
+                                <br/>
+                                <h4 class="fg-olive">Ingresa la siguiente información para continuar</h4>
                                 <br/>
                                 <form action="validar.php" method="post" data-role="validator" data-hint-mode="hint" data-hint-easing="easeOutBounce">
                                     <div class="input-control text alig-cont-reg" style="font-size:20px; height: 40px; width:300px;">
@@ -148,14 +150,13 @@
                                         <span class="input-state-error mif-warning"></span>
                                         <span class="input-state-success mif-checkmark"></span>
                                     </div>
-                                    <br> 
                                     <div class="input-control text alig-cont-reg" style="font-size:25px; height: 40px; width:300px;">
                                         <span class="mif-user prepend-icon"></span>
                                         <input id="email" name="email" style="font-size:20px; height: 40px; width:300px;" type="text" placeholder="Frase secreta" data-validate-func="minlength" data-validate-arg="1" data-validate-hint-position="top">
                                         <span class="input-state-error mif-warning"></span>
-                                    </div>
-
-                                    <div class="margin10">
+                                    </div>                                    
+                                    <div class="margin20">
+                                        
                                         <input type="submit" name="Submit" value="Cambiar" class="button bg-pass button large primary">
                                     </div>
                                 </form>
