--- a/resetpasswd.html
+++ b/resetpasswd.html
@@ -155,9 +155,9 @@
                                         <input id="email" name="email" style="font-size:20px; height: 40px; width:300px;" type="text" placeholder="Frase secreta" data-validate-func="minlength" data-validate-arg="1" data-validate-hint-position="top">
                                         <span class="input-state-error mif-warning"></span>
                                     </div>                                    
-                                    <div class="margin20">
-                                        
-                                        <input type="submit" name="Submit" value="Cambiar" class="button bg-pass button large primary">
+                                    <div class="marg-cont-recup">
+                                        <a href="index.html" class="fg-orange"> Cancelar </a> 
+                                        <input style="margin-left:35px;" type="submit" name="Submit" value="Cambiar" class="button bg-green success large primary">
                                     </div>
                                 </form>
                             </div>
