--- a/userpages/deleteacount.html
+++ b/userpages/deleteacount.html
@@ -7,24 +7,24 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
         <title>M2 - Save My Password</title>
-        <link REL="Shortcut Icon" HREF="img/icono.png">
+        <link REL="Shortcut Icon" HREF="../img/icono.png">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <meta name="description" content="Sitio web persoanl del bloggero M2">
         <meta name="keywords" content="HTML, CSS, JS, JavaScript,m2, linuxitos, fedora, web development">
         <meta name="author" content="Jesús Fernando Merino Merino and LiNuXiToS">
 
-        <link href="css/metro.css" rel="stylesheet">
-        <link href="css/metro-icons.css" rel="stylesheet">
+        <link href="../css/metro.css" rel="stylesheet">
+        <link href="../css/metro-icons.css" rel="stylesheet">
         <!-- link href="css/docs.css" rel="stylesheet" -->
-        <link href="css/m2main.css" rel="stylesheet">
+        <link href="../css/m2main.css" rel="stylesheet">
 
-        <script src="js/jquery-2.1.3.min.js"></script>
-        <script src="js/metro.js"></script>
-        <script src="js/docs.js"></script>
-        <script src="js/prettify/run_prettify.js"></script>
-        <script src="js/ga.js"></script>
-        <script src="js/jquery.dataTables.min.js"></script>
+        <script src="../js/jquery-2.1.3.min.js"></script>
+        <script src="../js/metro.js"></script>
+        <script src="../js/docs.js"></script>
+        <script src="../js/prettify/run_prettify.js"></script>
+        <script src="../js/ga.js"></script>
+        <script src="../js/jquery.dataTables.min.js"></script>
 
         <style>
             .icon-list li {
@@ -81,10 +81,10 @@
         <div class="container page-content">
             <!--Sección del menú cuando el usuario se haya logeado-->
             <div class="app-bar fixed-top darcula" data-role="appbar">
-                <a href="dashboard.html" class="app-bar-element branding selected"><span class="mif-home"> SaveMyPassword </span></a>
+                <a href="../dashboard.html" class="app-bar-element branding selected"><span class="mif-home"> SaveMyPassword </span></a>
                 <span class="app-bar-divider"></span>
                 <ul class="app-bar-menu">
-                    <li><a href="userpages/about.html" class="fg-white fg-hover-yellow"><span class="mif-help"></span> Acerca de</a></li>
+                    <li><a href="about.html" class="fg-white fg-hover-yellow"><span class="mif-help"></span> Acerca de</a></li>
                 </ul>
 
                 <div class="app-bar-element place-right">
@@ -92,8 +92,8 @@
                     <div class="app-bar-drop-container padding10 place-right no-margin-top block-shadow" data-role="dropdown" data-no-close="true" style="width: 220px">
                         <h2 class="text-light">Cuenta</h2>
                         <ul class="unstyled-list">
-                            <li><a href="userpages/deleteacount.html" class="fg-white fg-hover-yellow"><span class="mif-security"></span> Securidad</a></li>
-                            <li><a href="index.html" class="fg-white fg-hover-yellow"><span class="mif-exit"></span> Salir</a></li>
+                            <li><a href="#" class="fg-white fg-hover-yellow"><span class="mif-security"></span> Securidad</a></li>
+                            <li><a href="../index.html" class="fg-white fg-hover-yellow"><span class="mif-exit"></span> Salir</a></li>
                         </ul>
                     </div>
                 </div>
@@ -104,32 +104,32 @@
                 <div class="row" style="height: 100%">
                     <div class="cell size-x200" id="cell-sidebar" style="background-color: #71b1d1; height: 100%">
                         <ul class="sidebar">
-                            <li class="active">
-                                <a href="#">
+                            <li>
+                                <a href="../dashboard.html">
                                     <span class="mif-list icon"></span>
                                     <span class="title">Mostrar todo</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="userpages/addpasswd.html">
+                                <a href="addpasswd.html">
                                     <span class="mif-key icon"></span>
                                     <span class="title">Agregar</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="userpages/modifypasswd.html">
+                                <a href="modifypasswd.html">
                                     <span class="mif-search icon"></span>
                                     <span class="title">Modificar</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="userpages/acount.html">
+                                <a href="acount.html">
                                     <span class="mif-cogs icon"></span>
                                     <span class="title">Cuenta</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="userpages/help.html">
+                                <a href="help.html">
                                     <span class="mif-info icon"></span>
                                     <span class="title">Ayuda</span>
                                 </a>
@@ -137,46 +137,15 @@
                         </ul>
                     </div>
                     <div class="cell auto-size padding20 bg-white">
-                        <h1 class="text-light">Contraseñas almacenadas <span class="mif-list place-right"></span></h1>
+                        <h1 class="text-light fg-red"> Eliminar mi cuenta de SaveMyPassword <span class="mif-cancel place-right"></span></h1>
                         <hr class="thin bg-grayLighter">
-                        <button class="button primary" onclick="pushMessage('info')"><span class="mif-plus"></span> Agregar nueva...</button>
-                        <button class="button success" onclick="pushMessage('success')"><span class="mif-play"></span> Eliminar</button>
-                        <button class="button warning" onclick="pushMessage('warning')"><span class="mif-loop2"></span> Modificar</button>
-                        <button class="button alert" onclick="pushMessage('alert')">Eliminar todo</button>
-                        <hr class="thin bg-grayLighter">
-
-                        <table class="dataTable border bordered" data-role="datatable">
-                            <thead>
-                                <tr>
-                                    <td style="width: 20px"></td>
-                                    <td class="sortable-column sort-asc" style="width: 100px">ID</td>
-                                    <td class="sortable-column">Nombre usuario</td>
-                                    <td class="sortable-column">Contraseña</td>
-                                    <td class="sortable-column" style="width: 20px">Ver</td>
-                                    <td style="width: 20px">Descripción</td>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>
-                                        <label class="input-control checkbox small-check no-margin">
-                                            <input type="checkbox">
-                                            <span class="check"></span>
-                                        </label>
-                                    </td>
-                                    <td class="align-center"><a href="">1</a></td>
-                                    <td>hackme@please.com</td>
-                                    <td>holamundo1234</td>
-                                    <td class="align-center">
-                                        <label class="switch-original">
-                                            <input type="checkbox" checked>
-                                            <span class="check"></span>
-                                        </label>
-                                    </td>
-                                    <td class="align-left">Usuario del sitio hackme.please.com accedido hace un mes</td>
-                                </tr>
-                            </tbody>
-                        </table>
+                        <div class="grid">
+                            <div class="row ">
+                                <div class="cell colspan12">
+                                    
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -186,8 +155,8 @@
                 <div class="ali-der-menu span12">
                     <ul class="horizontal-menu compact">
                         <li><a target="_blanck" href="http://linuxgx.blogspot.mx/">&copy; 2015 SaveMyPassword - LiNuXiToS</a></li>
-                        <li class="place-right"><a href="userpages/privacity.html"> <span class="mif-security"> Privacidad </span> </a></li>
-                        <li class="place-right"><a href="userpages/help.html"> <span class="mif-help"> Ayuda </span> </a></li>
+                        <li class="place-right"><a href="privacity.html"> <span class="mif-security"> Privacidad </span> </a></li>
+                        <li class="place-right"><a href="help.html"> <span class="mif-help"> Ayuda </span> </a></li>
                     </ul>
                 </div>
             </div>
