--- a/userpages/deleteacount.html
+++ b/userpages/deleteacount.html
@@ -141,7 +141,11 @@
                         <hr class="thin bg-grayLighter">
                         <div class="grid">
                             <div class="row ">
-                                <div class="cell colspan12">
+                                <div class="cell colspan12 align-center ">
+                                    <h4>Al eliminar tu cuenta de SaveMyPassword, también se eliminará toda información que hayas almacenado en nuestro sitio web.</h4>
+                                    <h3 class="fg-crimson"> Cabe mencionar que no se te preguntará si deseas realmente eliminar tu cuenta. Al dar clic en el botón eliminar cuenta, automáticamente se eliminarán todos tus datos y se te redirigirá a la página oficial de este sitio.</h3>
+                                    <br/>
+                                    <h2 class="fg-orange">Si estás seguro de eliminar tu cuenta, clic en el botón siguiente</h2>
                                     
                                 </div>
                             </div>
