Actualización de correo

--- a/userpages/about.html
+++ b/userpages/about.html
@@ -156,7 +156,7 @@
                                         <span class="tag success">Git</span>
                                         <span class="tag success">Latex</span>
                                     </div>
-                                    Enviar sugerencias y bugs:<a href="mailto:ferbflit@gmail.com">LiNuXiToS</a>
+                                    Enviar sugerencias y bugs:<a href="mailto:linuxitos@gmail.com">LiNuXiToS</a>
                                 </h4>
                                 <div class="fg-darker align-center">
                                     <h3> Las principales redes sociales del autor</h3>
